fix text-wrap in Safari

--- a/src/features/comments/ui/index.module.css
+++ b/src/features/comments/ui/index.module.css
@@ -2,4 +2,7 @@
 .wrapText {
     text-wrap: wrap;
     max-width: 90vw;
+    white-space: normal;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
